vspace/src/main/webapp/resources/extra/Home.css
/* ... */
.Info_cz_Class {
    position: absolute;
    width: 29px;
    height: 29px;
    overflow: visible;
    -web-animation: fadein 0.3s ease-out;
    -web-action-type: view;
    -web-action-target: Modal;
    cursor: pointer;
}

.Ellipse_8_c {
    position: absolute;
    overflow: visible;
    width: 29px;
    height: 29px;
    left: 0px;
    top: 0px;
}

.Ellipse_10_c {
    position: absolute;
    overflow: visible;
    width: 25px;
    height: 25px;
    left: 2px;
    top: 2px;
}

.Ellipse_9_c {
    filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
    position: absolute;
    overflow: visible;
    width: 21px;
    height: 21px;
    left: 4px;
    top: 4px;
}

.Icon_awesome_info_c {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
}

.Icon_awesome_info_m {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
    color: rgba(150, 45, 62, 1);
}

.Icon_awesome_info_e {
    overflow: visible;
    position: absolute;
    font-size: 16px;
    top: 7px;
    left: 7px;
    color: rgba(150, 45, 62, 1);
}

.Group_3_Class {
    position: absolute;
    width: 37px;
    top: 70px;
    right: 1%;
    overflow: visible;
}

.Ellipse_8_dc {
    position: absolute;
    overflow: visible;
    width: 39px;
    height: 39px;
    left: 0px;
    top: 0px;
}

.Ellipse_10_dd {
    position: absolute;
    overflow: visible;
    width: 33px;
    height: 33px;
    left: 3px;
    top: 3px;
}

.Ellipse_9_de {
    filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
    position: absolute;
    overflow: visible;
    width: 28px;
    height: 26px;
    left: 6px;
    top: 6px;
    height: 26px;
}

#rightContent {
    height: 0px;
    width: 0px;
    position: absolute;
    z-index: 1;
    /* top: 10%; */
    right: 5px;
    overflow-x: hidden;
    background: #fff;
    transition: 0.5s;
    box-shadow: 0px 0px 5px 3px rgba(0.09, 0.09, 0.09, 0.09);
    border-radius: 10px 10px 10px 10px;
}

.leftContent {
    float: left;
    width: 75%;
}

.spaceDescription {
    padding-top: 26px;
    padding-left: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
    word-break: break-word;
    text-align: justify;
    margin: 5px;
}

#rightContent .closebtn {
    position: absolute;
    top: 8px;
    right: 3px;
    margin-left: 50px;
}

.Info_cz_module_Class {
    height: 26px;
    left: 965.622px;
    cursor: pointer;
    display: inline
}

.Ellipse_8_module_c {
    position: absolute;
    overflow: visible;
    width: 29px;
    height: 29px;
    left: 2px;
}

.Ellipse_10_module_c {
    position: absolute;
    overflow: visible;
    width: 25px;
    height: 25px;
    left: 4px;
    padding-top: 2px;
}

.Ellipse_9_module_c {
    filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
    position: absolute;
    overflow: visible;
    width: 21px;
    height: 21px;
    left: 6px;
    padding-top: 4px;
}

.Icon_awesome_info_module_m {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
    color: rgba(150, 45, 62, 1);
}

.imageStyle {
    min-height: 500px;
    min-width: 800px;
    border-radius: 13px;
}

.spaceName {
    font-size: 25px;
}

.Icon_awesome_info_staff_c {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
}

.Icon_awesome_info_staff_m {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
    color: rgba(150, 45, 62, 1);
}

.Icon_awesome_info_staff_e {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    top: 4px;
    left: 4px;
    color: rgba(150, 45, 62, 1);
}

.form_input {
	position: relative;
	z-index: 3;
}

.searchBar {
    position: absolute;
    pointer-events: auto;
    cursor: pointer;
    z-index: 5;
    right: 0;
    background: none;
}

.form_input:placeholder-shown {
	z-index: 1;
}

.link-modal {
	display: none;
	position: fixed;
	top: 2.5%;
	right: 2.5%;
	left: 2.5%;
	bottom: 0;
	z-index: 9999;
	overflow-y: scroll;
	background: white;
	padding: 25px;
	border-radius: 10px;
	box-shadow: 0 0 300px rgba(0,0,0,0.9);
}

.divider {
    height: 100%;
    width: 1px;
    background: var(--med-grey);
    margin: 0px 20px;
}

.Icon_awesome_info_module_m_sidenav {
    overflow: visible;
    position: absolute;
    font-size: 20px;
    left: 6px;
    color: rgba(150, 45, 62, 1);
}

.Ellipse_9_module_c_sidenav {
    filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.161));
    position: absolute;
    overflow: visible;
    width: 21px;
    height: 21px;
    left: 6px;
    padding-top: 0px;
}

.Ellipse_10_module_c_sidenav {
    position: absolute;
    overflow: visible;
    width: 25px;
    height: 25px;
    left: 4px;
    padding-top: 0px;
    margin-top: -2px;
}

.Ellipse_8_module_c_sidenav {
    position: absolute;
    overflow: visible;
    width: 29px;
    height: 29px;
    left: 2px;
    margin-top: -3px;
}

.textDivStaff {
    position: relative;
    top: 0px;
    overflow: visible;
    text-align: justify;
}

.SpaceDivStaff {
    position: relative;
    top: 0px;
    overflow: visible;
    text-align: justify;
}

.choiceDiv {
    position: relative;
    top: 0px;
    overflow: visible;
    text-align: justify;
}
.custom_form_style {
    display: none;
    width: 25%;
}

.circle-btn {
	background: white;
	width: 48px;
	height: 48px;
	border-radius: 50%;
	box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
}

.slide-nav {
    left: 10%;
    position: absolute;
    top: 10%;
}

.circle-btn-slide-nav {
    background: white;
    width: 33px;
    height: 33px;
    left:19%;
    border-radius: 50%;
    box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
}

.circle-btn:hover {
	background: #f2f2f2;
}

.searchInput {
	display: flex !important;
	background: var(--base-grey) !important;
	border-radius: 5px !important;
}

.searchImg {
	border-radius: 25px;
	float: left;
	width: 150px;
	height: 150px;
	margin-right: 15px !important;
}
/* ... */

